# experiments

./: .gitignore  .gitmodules  README
arduino/led_matrix/: led_matrix.ino  letters.h  running_str.h  running_string.ino
compiletime/: Makefile  compiletime  compiletime.c  string_test  string_test.cpp
diagrams_txt/authentication/: auth_digest_classes.txt  block_scheme.txt  no_radius_auth_success.txt  radius_auth_challenge_fail_auth_code.txt  radius_auth_challenge_fail_challenge_code.txt  radius_auth_challenge_success.txt  radius_auth_challenge_success_code.txt  radius_auth_no_challenge_fail_code.txt  radius_auth_no_challenge_success.txt  radius_auth_no_challenge_success_code.txt
fax_gateway/: README_callgrind  README_flamegraph  fax.perf
general_stuff/: .bashrc  .gitconfig  default_copy.xml  qt2.xml
ipc_semaphore/: .gitignore  Makefile  semtester.c
pjsip_inv_example/: Makefile  README.md  auto_answer.c  sipp_results  solution_text.txt
pjsip_inv_example/sipp_traffic/: extension.csv  uac_test.xml
png_analize/: png_anal.c
running_string/: CMakeLists.txt  Makefile  letters.h  main.c  running_str.c  running_str.h  running_str_config.h.in
sockets/: .gitignore  Makefile  client.c  client_dgram  client_dgram.c  client_tcp.c  netdevice.c  netdevice.h  netdevice_test.c  server.c  server_dgram.c  server_tcp.c
sockets/a2e/: CMakeLists.txt  Makefile  QWEN.md  a2e.c  a2e.h  a2e_client.c  a2e_client.h  a2e_common.c  a2e_common.h  a2e_dbg.c  a2e_dbg.h  a2e_def.h  a2e_iface.h  a2e_msg.c  a2e_msg.h  a2e_server.c  a2e_server.h  client.c  main.c  server.c
sockets/a2e/include/: a2e.h  a2e_client.h  a2e_common.h  a2e_dbg.h  a2e_def.h  a2e_iface.h  a2e_msg.h  a2e_server.h
sockets/a2e/python_imp/: README.md  demo_client.py  demo_server.py
sockets/a2e/python_imp/a2e/: __init__.py  client.py  common.py  dbg.py  defs.py  exceptions.py  iface.py  msg.py  server.py
sockets/a2e/src/: a2e.c  a2e_client.c  a2e_common.c  a2e_dbg.c  a2e_msg.c  a2e_server.c
sockets/a2e/tests/: CMakeLists.txt  a2e_dbg_test.cpp  a2e_msg_test.cpp  a2e_test.cpp  cpputest  test_a2e_client.cpp  test_a2e_common.cpp  test_a2e_dbg.cpp  test_template.cpp
study/cpp/PatternsFreeman/: CMakeLists.txt  cpputest  patterns.h.in
study/cpp/PatternsFreeman/10_Iterator/: CMakeLists.txt  Makefile  iterator.h  main.cpp  simplelist.cpp  simplelist.h
study/cpp/PatternsFreeman/1_Ducks/: CMakeLists.txt  Makefile  main.cpp
study/cpp/PatternsFreeman/1_Ducks/c_imp/: CMakeLists.txt  bath_duck.h  duck.c  duck.h  fly_behavior.h  main.c  mellor_duck.h  quak_behavior.c  test.cpp
study/cpp/PatternsFreeman/1_Ducks/c_imp/tests/: CMakeLists.txt  test.cpp  test_mellor_duck.cpp
study/cpp/PatternsFreeman/1_Strategy/: CMakeLists.txt  duck.hpp
study/cpp/PatternsFreeman/1_Strategy/array/: CMakeLists.txt  array.h
study/cpp/PatternsFreeman/1_Strategy/c_imp/: CMakeLists.txt  bath_duck.c  duck.h  fly_behavior.c  main.c  mellor_duck.c  quak_behavior.h  rocket_duck.c  rocket_duck.h
study/cpp/PatternsFreeman/1_Strategy/c_imp/tests/: CMakeLists.txt  test.cpp  test_mellor_duck.cpp
study/cpp/PatternsFreeman/2_Observer/: CMakeLists.txt  Makefile  main.c  observer.h
study/cpp/PatternsFreeman/3_Decorator/: CMakeLists.txt  Makefile  decorator.h  main.c
study/cpp/PatternsFreeman/4_Factory/: CMakeLists.txt  Makefile  components.h  factory.h  main.cpp  salad.h  salad_shop.h
study/cpp/PatternsFreeman/5_Singleton/: CMakeLists.txt  Makefile  main.cpp  singleton.h
study/cpp/PatternsFreeman/6_Command/: CMakeLists.txt  Makefile  command.h  main.cpp
study/cpp/PatternsFreeman/7_Adapter/: CMakeLists.txt  Makefile  adapter.h  main.cpp
study/cpp/PatternsFreeman/7_Adapter/c_impl/: CMakeLists.txt  cadapter.c  cadapter.h  main.c
study/cpp/PatternsFreeman/8_Facade/: CMakeLists.txt  Makefile  facade.h  main.cpp  subsystem.h
study/cpp/PatternsFreeman/9_TemplateMethod/: CMakeLists.txt  Makefile  main.cpp  template_method.h
study/cpp/PatternsFreeman/array/: CMakeLists.txt  array.c  array.h  array_fill_strategy.c  array_fill_strategy.h  array_find_strategy.c  array_find_strategy.h  array_show_strategy.c  array_show_strategy.h  array_size_strategy.c  array_size_strategy.h  array_sort_strategy.c  array_sort_strategy.h  build.sh  text_fmt
study/cpp/PatternsFreeman/array/tests/: CMakeLists.txt  test.cpp
study/cpp/SPrata/: Makefile
study/cpp/algorythms/: Makefile
study/cpp/test/: iteration.cpp  test.cpp
study/docker/: run.sh
study/docker/0_test/: Dockerfile  docker_test.py
study/docker/1_comiling_with_gcc/: Dockerfile  Makefile  main.c
study/docker/2_cat_test/: Dockerfile  Makefile
study/docker/ek_dockerfile_example/: Dockerfile
study/docker/smg_docker_examples/: Dockerfile
study/eltex/: memory.c
study/python/: vars_1_1.py
study/python/PythonBerry/: QWEN.md
study/python/first_tryies/: create_c_template.py  e2c.py  first_test.py  operators_1_0.py  vars_1.py  vars_1_2.py
study/python/head_first/: c1_0.py  c2_0_lists.py  e2c.py  (+1 more)
t38_transmitter_receiver/: t38_transmitter.c
test/: 1.c  1.s  aligment.c  app_mem_addr.c  atoi_test.c  bit.c  bit_array.c  bit_shift.c  bit_struct_initialization.c  bit_union.c  bytes.c  case_enum.c  char_comp.c  clocks.c  common_test.c  const_char_change.c  cycle_object_live.cpp  db.cpp  disassembly_break.c  double_pointer_malloc.c  endianess_check.c  enum.c  enum_case.c  enum_warning.c  fib.c  file_in  func_in_for.c  func_ptr.c  inc_dec.c  looong_int.c  macro_strliteral.cpp  memmove.c  possible_weight.c  post_increment.c  post_increment_prio.c  pre_increment.c  preporoc.c  sanitizer.c  sdvig.c  sizeof.c  (+18 more)
test/codewars/: codewars.py  sorted_substrings.c
trello/: books.json  books_formated.json  useful_links.json  useful_links_formated.json
unit/: CheatSheetTest.cpp
unit/src/: .gitignore  Makefile  increase.c  lib.c  main.c
vault/My obsidian vault/: Добро пожаловать.md
vim/: .vimrc  .vimrc_no_lsp  Dockerfile  Makefile  init.vim  luchko_vimrc  qtvimrc  vifm_bug_fix
vim/docker/: .Dockerfile.swp  .Makefile.swp  Dockerfile  Makefile  docker_vimrc  run.sh  run_vim.sh
vim/syntax/: c.vim
(+178 files in other folders)
